@@ -1,12 +1,12 @@
 <?php
-// $Id: system.module,v 1.440.2.53 2009/05/13 19:41:56 drumm Exp $
+// $Id: system.module,v 1.440.2.54 2009/07/01 20:52:11 drumm Exp $
 
 /**
  * @file
  * Configuration system that lets administrators modify the workings of the site.
  */
 
-define('VERSION', '5.18');
+define('VERSION', '5.19');
 
 /**
  * Implementation of hook_help().
