@@ -1,4 +1,10 @@
-// $Id: CHANGELOG.txt,v 1.173.2.40 2009/05/13 19:41:55 drumm Exp $
+// $Id: CHANGELOG.txt,v 1.173.2.41 2009/07/01 20:52:11 drumm Exp $
+
+Drupal 5.19, 2009-07-01
+-----------------------
+- Fixed security issues (Cross site scripting and Password leakage in URL), see
+  SA-CORE-2009-007.          
+- Fixed a variety of small bugs.
 
 Drupal 5.18, 2009-05-13
 -----------------------
